EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==11/20/2010==
Caryatis: Fix for discs being resisted too much, beneficial spells and resurrection effects will no longer be resistable.
Caryatis: Fix for CriticalHitChance being calculated incorrectly, leading to massively increased crit rates.

Optional SQL: 1736_optional_sql_feral_swipe
Required SQL: 1737_required_sql_rule_and_aa_update

==11/14/2010==
Derision: Underfoot: Buff removal should now work correctly.
Derision: Underfoot: Fixed Pet Buff window.
Trevius: Fixed quest::setnextinchpevent().
Trevius: Added Player EVENT_GROUP_CHANGE that exports variables $grouped and $raided when changes in group or raid status are made
Trevius: Added Perl Client MarkCompassLoc(x, y, z) and ClearCompassMark().
Trevius: Minor rewrite to EVENT_HP again to use less variables.

==11/13/2010==
Derision: Corrected OP_Track for Underfoot/June 8 2010 Client.
Derision: Corrected FindPersonRequest_Struct for Underfoot/June 8 2010 Client.
Derision: Buying AAs seems to work better now for Underfoot/June 8 2010 Client.
Derision: Most Pet commands should now work for Underfoot/June 8 2010 Client.

==11/10/2010==
Caryatis: Added support for HealAmt, SpellDmg, Clairvoyance, DS Mitigation, SE_SpellDamageShield, SE_SpellDamage
Caryatis: Heroics fully supported now(points in brackets are how many Heroics to achieve a gain)
Caryatis: hInt = For int-based casters, increases mana pool, mana regen(25), and the maximum amount of mana regen a character can have(25).
Caryatis: hWis = For wis-based casters, increases mana pool, mana regen(25), and the maximum amount of mana regen a character can have(25).
Caryatis: hStr = Increases endurance pool, endurance regen(25), and the maximum amount of endurance regen a character can have(25). Also increases damage done by melee attacks(10) and improves the bonus granted to armor class while using a shield(2).